<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.allanlopez.imc.ResultadosActivity">

    <ImageView
        android:id="@+id/cuerpo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="49dp"
        android:src="@drawable/men_bmi_17_5"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="103dp"
        android:layout_marginTop="49dp"
        android:text="TextView"
        android:textAlignment="viewStart"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/cuerpo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="103dp" />

    <TextView
        android:id="@+id/imc"
        android:layout_width="110dp"
        android:layout_height="17dp"
        android:text="TextView"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toBottomOf="@+id/nombre"
        app:layout_constraintLeft_toRightOf="@+id/cuerpo"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/ideal"
        android:layout_width="108dp"
        android:layout_height="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="66dp"
        android:text="TextView"
        android:textAlignment="viewStart"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintLeft_toRightOf="@+id/cuerpo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imc"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/energia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/ideal"
        android:layout_marginRight="103dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/cuerpo"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="103dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="168dp"
        android:layout_height="48dp"
        android:onClick="recalcular"
        android:text="@string/recalcular"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="27dp"
        app:layout_constraintRight_toLeftOf="@+id/button3"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.192"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="233dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:onClick="openBMI"
        android:text="@string/abrir"
        android:layout_marginRight="28dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/energia"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/compartir"
        android:layout_width="205dp"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:onClick="compartirResultados"
        android:text="@string/compartir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.077"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:onClick="reiniciar"
        android:text="@string/reset"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compartir" />

</android.support.constraint.ConstraintLayout>
